# forge

./: .editorconfig  .gitignore  .npmrc  .prettierrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  README.vi.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: check-clean-env.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_per_site_php.sql  0003_dns_port.sql  0004_site_domains.sql  0005_https_enabled.sql
src-tauri/src/: error.rs  lib.rs  main.rs  store.rs
src-tauri/src/commands/: bundles.rs  certs.rs  mod.rs  sites.rs  system.rs  tools.rs  wizard.rs
src-tauri/src/domain/: apache.rs  bundle.rs  certs.rs  dns.rs  logs.rs  mod.rs  nginx.rs  php.rs  process.rs  scaffold.rs  sites.rs  tools.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/templates/: apache.vhost.conf.tera  httpd.conf.tera  landing.php  nginx.conf.tera  php-fpm.conf.tera  plain_php.php  site.conf.tera  static_index.html
src/components/: ApacheInstallDialog.tsx  PageHeader.tsx  Sidebar.tsx
src/components/Wizard/: FirstRunWizard.tsx
src/components/ui/: button-variants.ts  button.tsx  dialog.tsx  input.tsx
src/i18n/: index.ts
src/lib/: tauri.ts
src/pages/: About.tsx  General.tsx  Php.tsx  Services.tsx  Sites.tsx
src/styles/: globals.css
src/types/: index.ts
(+2 files in other folders)
